--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@line/bot-sdk": "^9.8.0",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "pg": "^8.14.1"
   }
